force-app/main/default/objects/ssot__DataUsePurpose__dlm/fields/ssot__CanMaintainPerContactChannel__c.field-meta.xml
<CustomField>
    <fullName>ssot__CanMaintainPerContactChannel__c</fullName>
    <label>Maintain Per Contact Channel Flag</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CanMaintainPerContactChannel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>