force-app/main/default/objects/ssot__DataUsePurpose__dlm/fields/ssot__CanMaintainPerParty__c.field-meta.xml
<CustomField>
    <fullName>ssot__CanMaintainPerParty__c</fullName>
    <label>Maintain Per Party Flag</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CanMaintainPerParty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>