force-app/main/default/objects/ssot__DataUsePurpose__dlm/fields/ssot__EntityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EntityId__c</fullName>
    <label>Entity</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EntityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>